# deep-analytics-investigator

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py
app/graph/: state.py  workflow.py
app/graph/nodes/: baseline_queries.py  generate_hypotheses.py  generate_hypotheses_llm.py  generate_report.py  generate_report_llm.py  parse_question.py  parse_question_llm.py  rank_hypotheses.py  resolve_metric.py  segment_breakdowns.py  select_route_llm.py  validate_hypotheses.py
app/models/: evidence.py
app/prompts/: generate_hypotheses_prompt.py  generate_report_prompt.py  parse_question_prompt.py  select_route_prompt.py
app/registries/: query_family_registry.py  route_registry.py  schema_registry.py
app/services/: database.py  evidence_builder.py  guardrails.py  llm_client.py  report_formatter.py  settings.py
app/tools/: metric_registry.py  sql_executor.py
docs/: design-summary.md  v2-architecture.md
scripts/: seed_data.py  validate_seed.py
tests/: test_guardrails.py  test_llm_contract_validation.py  test_llm_end_to_end_eval.py  test_llm_hypotheses_fallback.py  test_llm_parse_fallback.py  test_llm_report_fallback.py  test_llm_route_selection_fallback.py  test_v2_scaffolding.py  test_workflow.py
