[project]
name = "deep-analytics-investigator"
version = "0.1.0"
description = "Agentic analytics investigator built with LangGraph and LangChain"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "langgraph>=0.2.34",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic>=2.8.0",
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.1",
  "pytest>=8.3.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
